[package]
name = "t1stateroot-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# alloy
alloy-sol-types = { version = "0.8", features = ["json"] }
alloy-primitives = { version = "0.8.4", default-features = false, features = ["rand", "rlp"] }

# smart contract interaction
web3 = "0.18.0"
tracing-subscriber = "0.3.17"
secp256k1 = { version = "0.21.3" }

tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
